[package]
name = "paradise-city"
version = "0.2.0"


categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
serde = "= 1.0.75"
serde_derive = " = 1.0.75"
serde_json = "= 1.0.26"
rand = "0.4"
zeroize = "0.5.2"
itoa = "= 0.4.2"
ryu = "= 0.2.6"
proc-macro2 = "= 0.4.14"
quote = "= 0.6.8"

[dependencies.sapling-crypto]
git = "https://github.com/omershlo/librustzcash.git"
rev = "3e667406323430813f6dbae2a60b5a83046fa20a"

[dependencies.pairing]
git = "https://github.com/omershlo/librustzcash.git"
rev = "3e667406323430813f6dbae2a60b5a83046fa20a"

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"

[dependencies.rust-gmp]
version = "0.5.0"
features = ["serde_support"]
git = "https://github.com/KZen-networks/rust-gmp"

[dev-dependencies]
criterion = "0.2"
